objects/Mulesoft_Configuration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>API_ver__c</fullName>
        <label>API ver</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatter_Notification_Body_Mortgage__c</fullName>
        <label>Chatter Notification Body Mortgage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Chatter_Notification_Body__c</fullName>
        <description>Stores the text will be sent as a chatter feed. 
Available Variables = $DashboardName</description>
        <inlineHelpText>Use $DashboardName variable in the text. It&apos;ll be replaced while posting the chatter feed.</inlineHelpText>
        <label>Chatter Notification Body  PAF</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Chatter_Users_Id__c</fullName>
        <label>Chatter Users Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dashboard_Id__c</fullName>
        <label>Dashboard Id&apos;s</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error_Handling_URL__c</fullName>
        <label>Error Handling URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Error_Recipient__c</fullName>
        <inlineHelpText>Please enter email id&apos;s of recipient. To whom error messages to be sent.</inlineHelpText>
        <label>Error Recipients</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mortgage_Last_Sync_Time__c</fullName>
        <label>Mortgage Last Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mortgage_User_Group__c</fullName>
        <description>Add all the id for Public Groups and User to whom notifications need to send.</description>
        <inlineHelpText>Add all the id for Public Groups and User to whom notifications need to send.</inlineHelpText>
        <label>Mortgage User Group</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mulesoft_Job_Url__c</fullName>
        <label>Mulesoft Job Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Mulesoft_Password__c</fullName>
        <label>Mulesoft Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mulesoft_User_Name__c</fullName>
        <label>Mulesoft User Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotificationTemplete_Mortgage__c</fullName>
        <label>NotificationTemplete Mortgage</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotificationTemplete_PAF__c</fullName>
        <label>NotificationTemplete PAF</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAF_Last_Sync_Time__c</fullName>
        <label>PAF Last Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PAF_User_Groups__c</fullName>
        <description>Add all the id for Public Groups and User to whom notifications need to send.</description>
        <inlineHelpText>Add all the id for Public Groups and User to whom notifications need to send.</inlineHelpText>
        <label>PAF User Groups</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Result_Batch_Class_Id__c</fullName>
        <label>Result Batch Class Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Password__c</fullName>
        <label>SF Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Token_Endpoint__c</fullName>
        <label>SF Token Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SF_User_Name__c</fullName>
        <label>SF User Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Instance_URL__c</fullName>
        <label>Salesforce Instance URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Success_Recipients__c</fullName>
        <label>Success Recipients</label>
        <type>TextArea</type>
    </fields>
    <label>Mulesoft Configuration</label>
</CustomObject>